[project]
name = "langchain-cloudflare-monorepo"
version = "0.1.0"
description = "Langchain Cloudflare mono-repo"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.15.0",
    "types-requests>=2.31.0",
]

[tool.uv.sources]
langchain-cloudflare = { path = "libs/langchain-cloudflare", editable = true }
langgraph-checkpoint-cloudflare-d1 = { path = "libs/langgraph-checkpoint-cloudflare-d1", editable = true }
langmem-cloudflare-vectorize = { path = "libs/langmem-cloudflare-vectorize", editable = true }
