[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langmem-cloudflare-vectorize"
version = "0.1.1"
description = "Langgraph BaseStore for Vectorize to use with Langmem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.5.0",
    "langchain-core>=0.3.81",
    "requests>=2.31.0",
    "httpx>=0.24.1",
    "pydantic>=1.10.0,<3.0.0",
    "langchain-cloudflare>=0.1.8",
]

[project.urls]
"Source Code" = "https://github.com/cloudflare/langchain-cloudflare/libs/langmem-cloudflare-vectorize"
"Release Notes" = "https://github.com/cloudflare/langchain-cloudflare/libs/langmem-cloudflare-vectorize/blob/main/README.md"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.15.0",
    "codespell>=2.2.0",
    "types-requests>=2.32.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-socket>=0.7.0",
    "pytest-watcher>=0.3.4",
    "langchain-tests>=0.3.17",
]

[tool.hatch.build.targets.wheel]
packages = ["langmem_cloudflare_vectorize"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langchain_tests.*",
    "langchain_core.*",
    "langgraph.*",
    "langchain_cloudflare.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]
ignore = ["E501"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
