[project]
name = "langchain-cloudflare-example"
version = "0.1.0"
description = "Example of using LangChain with Cloudflare Python Workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "langchain-cloudflare @ file:////Users/collierking/Desktop/github/langchain-cloudflare/libs/langchain-cloudflare",
    "langchain-core>=1.0.0",
    "sqlalchemy-cloudflare-d1 @ file:////Users/collierking/Desktop/github/sqlalchemy-cloudflare-d1",
    # NOTE: Do NOT include pydantic - use Pyodide's built-in version
    # pydantic_core requires compiled Rust binaries that aren't available for WebAssembly
    # NOTE: langchain>=1.0.0 requires langgraph which requires ormsgpack (no Pyodide wheel)
    # We install langchain-core>=1.0.0 and manually add langgraph/langchain after with stub
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest>=7.0.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
